--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,15 +25,32 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-column-gap: 11px;
+      
+      @media(max-width:1400px){
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media(max-width:1060px){
+        grid-template-columns: repeat(2, 1fr);
+        margin:0 auto;
+      }
+      @media(max-width:730px){
+        grid-template-columns: repeat(1, 1fr);
+      }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media(max-width:1300px){
+      flex-direction: column-reverse;
+      gap: 15px;
+    }
   }
 }
 
@@ -105,7 +122,10 @@ body {
       }
     }
   }
-
+  &__items{
+    display: flex;
+    flex-direction: column;
+  }
   &__item {
     display: flex;
     width: 100%;
