--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media(max-width:660px){
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 
   &__logo {
@@ -15,6 +20,10 @@
 
     img {
       margin-right: 15px;
+
+      @media(max-width:660px){
+        transform: rotate(90deg)
+      }
     }
 
     h1 {
