--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -294,7 +294,7 @@ body {
   }
 
   &--empty {
-    margin: 0 auto;
+    margin:-50px auto;
     width: 560px;
     text-align: center;
 
@@ -329,4 +329,8 @@ body {
       font-size: 18px;
     }
   }
+}
+
+.HomeError{
+  padding:100px 0 200px 0;
 }
